# esp-idf

examples/i2c-lcd1602/: CMakeLists.txt  Makefile
examples/i2c-lcd1602/components/esp32-smbus/: CMakeLists.txt
examples/i2c-lcd1602/components/esp32-smbus/include/: smbus.h
examples/i2c-lcd1602/components/i2c-lcd1602/: i2c-lcd1602.c
examples/i2c-lcd1602/components/i2c-lcd1602/doc/: Doxyfile
examples/i2c-lcd1602/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
examples/lcd_hd44780/i2c_sample/components/HD44780/: CMakeLists.txt  HD44780.c
examples/lcd_hd44780/i2c_sample/main/: CMakeLists.txt  main.c
examples/solar/solar_meter/: CMakeLists.txt  README.md  pytest_blink.py
examples/solar/solar_meter/include/: delay_monitor.h  generic_define.h  gpio_state_monitor.h  lcd_display.h  led_state_monitor.h  power_monitor.h  relay_monitor.h  wifi_config.h
examples/solar/solar_meter/main/: CMakeLists.txt  solar_meter.c
examples/solar/solar_meter/src/: delay_monitor.c  gpio_state_monitor.c  lcd2004_i2c.c  lcd_display.c  led_state_monitor.c  power_monitor.c  relay_monitor.c  wifi_config.c
solar_energy/: CMakeLists.txt  Makefile
solar_energy/components/: CMakeLists.txt  adc_handler.c  adc_handler.h  led_handler.c  led_handler.h
solar_energy/main/: CMakeLists.txt  solar_energy.c
